[FIX] mass_mailing: remove the wrong scrollbar in html field
Add "web_editor_inside_iframe" id in web_editor iframe template to apply css style only when the field is in html field.
Remove "content" css media query in iframe editor to remove scrollbar.

--- a/addons/mass_mailing/static/src/css/mass_mailing_popup.css
+++ b/addons/mass_mailing/static/src/css/mass_mailing_popup.css
@@ -172,6 +172,9 @@ fieldset[disabled] #o_newsletter_popup .btn.btn-success.active {
   background: linear-gradient(135deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 42%, rgba(255, 255, 255, 0) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#00ffffff', GradientType=1);
 }
+#web_editor_inside_iframe #o_newsletter_popup .o_popup_modal_content:before {
+  content: none;
+}
 #o_newsletter_popup .o_popup_modal_content .o_popup_modal_header {
   background: #6c1153;
   padding: 5px;
